--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "fabric-ca-client": "~1.4.0",
     "fabric-client": "~1.4.0",
     "npm-run-all": "~4.1.5"
+  },
+  "dependencies": {
+    "create-react-app": "^3.2.0"
   }
 }
